prevent notes from getting out of the view

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 
+:root {
+    --max-z-index: 2147483647;
+}
+
 *  {
     margin: 0;
     padding: 0;
@@ -13,6 +17,7 @@ body {
     max-width: 100vw;
     display: grid;
     grid-template: 1fr / 1fr 7fr;
+    overflow: hidden;
 }
 
 .sidebar {
@@ -20,6 +25,8 @@ body {
     position: relative;
     padding: 10px;
     font-family: "Abril Fatface", serif;
+    z-index: var(--max-z-index);
+    user-select: none;
 }
 
 .sidebar > h1 {
@@ -86,7 +93,7 @@ body {
     font-weight: bold;
     font-size: 1.5rem;
     cursor: pointer;
-    z-index: 10;
+    z-index: var(--max-z-index);
 }
 
 .main-content > button:hover {
